--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub search</title>
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 
 <body>
@@ -17,20 +18,35 @@
 
         <!-- Content -->
         <article class="content">
-            <h1 class="content__title">Search GitHub users</h1>
+            <h1 class="content__title">{{ message }}</h1>
 
             <!-- Search -->
-            <form class="search">
-                <input type="text" class="search__input" required placeholder="Search GitHub users">
+            <form class="search" v-on:submit.prevent="doSearch">
+                <input v-model="search" type="text" class="search__input" required placeholder="Search GitHub users">
                 <input type="submit" class="search__submit" value="Search">
             </form>
 
             <!-- Result -->
             <!-- Error -->
-            <div class="result__error"></div>
+            <div class="result" v-if="result">
+                <h2 class="result__name">Juan Andrés Núñez</h2>
+                <img src="https://avatars.githubusercontent.com/u/8166774?v=4" alt="" class="result__avatar">
+                <p class="result__bio">Especialista en JavaScript y Vue.js. Formador profesional de desarrolladores/as
+                    Web. Practicante de estoicismo.
+                    <br>
+                    <a href="http://www.wmedia.es" class="result__blog">http://www.wmedia.es</a>
+                </p>
+            </div>
+            <p v-else="result" v-if="!error">Waiting for response...</p>
+
+            <!-- Error -->
+            <div class="result__error" v-if="error">Error found</div>
         </article>
     </div>
     <script src="js/main.js"></script>
+    <script>
+        const mountedApp = app.mount("#app")
+    </script>
 </body>
 
 </html>
