--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <body>
     <div id="app">
         <!-- Favorites -->
-        <div class="favorites">
+        <div class="favorites" >
+            <div class="favorite" v-for="favorite in allFavorites">
+                <a :href="favorite.blog" target="_blank">
+                    <img :src="favorite.avatar_url" :alt="favorite.name" class="favorite__avatar">
+                </a>
+            </div>
         </div>
 
         <!-- Content -->
@@ -29,18 +34,20 @@
             <!-- Result -->
             <!-- Error -->
             <div class="result" v-if="result">
-                <h2 class="result__name">Juan Andrés Núñez</h2>
-                <img src="https://avatars.githubusercontent.com/u/8166774?v=4" alt="" class="result__avatar">
-                <p class="result__bio">Especialista en JavaScript y Vue.js. Formador profesional de desarrolladores/as
-                    Web. Practicante de estoicismo.
+                <a v-if="isFavorite" href="#" class="result__toggle-favorite" @click="removeFavorite">Remove Favorite ⭐️</a>
+                <a v-else href="#" class="result__toggle-favorite" @click="addFavorite">Add Favorite ⭐️</a>
+                
+
+                <h2 class="result__name">{{ result.name }}</h2>
+                <img v-bind:src="result.avatar_url" :alt="result.name" class="result__avatar">
+                <p class="result__bio">{{ result.bio }}
                     <br>
-                    <a href="http://www.wmedia.es" class="result__blog">http://www.wmedia.es</a>
+                    <a v-bind:href="result.blog" target="_blank" class="result__blog">{{ result.blog }}</a>
                 </p>
             </div>
-            <p v-else="result" v-if="!error">Waiting for response...</p>
-
+            
             <!-- Error -->
-            <div class="result__error" v-if="error">Error found</div>
+            <div class="result__error" v-if="error">{{ error }}</div>
         </article>
     </div>
     <script src="js/main.js"></script>
