--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
     <div id="app">
         <!-- Favorites -->
         <div class="favorites" >
-            <div class="favorite" v-for="favorite in allFavorites">
-                <a :href="favorite.blog" target="_blank">
-                    <img :src="favorite.avatar_url" :alt="favorite.name" class="favorite__avatar">
-                </a>
-            </div>
+            <transition-group name="list">
+                <div 
+                    class="favorite" 
+                    :class=" {'favorite--selected': checkFavorite(favorite.login) }"
+                    v-for="favorite in allFavorites" :key="favorite.id">
+                    <a @click.prevent="showFavorite(favorite)" href="#">
+                        <img :src="favorite.avatar_url" :alt="favorite.name" class="favorite__avatar">
+                    </a>
+                </div>
+            </transition-group>
         </div>
 
         <!-- Content -->
@@ -33,24 +38,21 @@
 
             <!-- Result -->
             <!-- Error -->
-            <div class="result" v-if="result">
-                <a v-if="isFavorite" href="#" class="result__toggle-favorite" @click="removeFavorite">Remove Favorite ⭐️</a>
-                <a v-else href="#" class="result__toggle-favorite" @click="addFavorite">Add Favorite ⭐️</a>
-                
-
-                <h2 class="result__name">{{ result.name }}</h2>
-                <img v-bind:src="result.avatar_url" :alt="result.name" class="result__avatar">
-                <p class="result__bio">{{ result.bio }}
-                    <br>
-                    <a v-bind:href="result.blog" target="_blank" class="result__blog">{{ result.blog }}</a>
-                </p>
-            </div>
+             <Transition>
+                <app-profile 
+                    v-if="result"
+                    :result="result"
+                    :is-favorite="isFavorite"
+                    @add-favorite="addFavorite"
+                    @remove-favorite="removeFavorite"  />
+            </Transition>
             
             <!-- Error -->
             <div class="result__error" v-if="error">{{ error }}</div>
         </article>
     </div>
     <script src="js/main.js"></script>
+    <script src="js/components/AppProfile.js"></script>
     <script>
         const mountedApp = app.mount("#app")
     </script>
